# tandem-desktop

./: .dockerignore  .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: client-linux.yml  client-macos.yml  client-windows.yml  release.yml
apps/client/: index.html  package.json  vite.config.ts
apps/client/src/: App.tsx  index.css
apps/client/src-tauri/: Cargo.toml  Info.macos.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/client/src-tauri/.cargo/: config.toml
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/examples/: list-sources-probe.rs  ndi-probe.rs
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/permissions/: app-commands.toml
apps/client/src-tauri/src/: lib.rs  linux_appimage_env.rs  logging.rs  main.rs  ndi_config.rs  window_icon.rs
apps/client/src-tauri/src/capture/: frame_server.rs  linux_display_env.rs  linux_screen.rs  macos_screen_permission.rs  mod.rs  ndi.rs  preview.rs  sources.rs  types.rs  video_capture.rs  windows_performance.rs  windows_video.rs
apps/client/src-tauri/src/presentation/: mod.rs  windows_focus.rs  windows_key.rs
apps/client/src/components/: capture-grid.tsx  capture-slot-card.tsx  create-room-dialog.tsx  landing-view.tsx  leave-room-dialog.tsx  presentation-target-select.tsx  publisher-switcher.tsx  session-loading-screen.tsx  settings-dialog.tsx  slot-preview-video.tsx  toast.tsx
apps/client/src/contexts/: slot-preview-streams.tsx
apps/client/src/hooks/: use-capture-sources.ts  use-client-diagnostics.ts  use-desktop-socket.ts  use-livekit-publisher.ts  use-prevent-background-throttling.ts  use-slot-capture.ts  use-slot-preview.ts  use-suspend-capture-when-inactive.ts
apps/client/src/lib/: diagnostics.ts  kick-publisher.ts  livekit-publish-options.ts  media-token.ts  server-url.ts
apps/client/src/lib/capture/: native-frame-stream.ts  start-slot-capture.ts  webcam.ts
apps/client/src/types/: capture.ts  presentation.ts
scripts/: dev.mjs  with-ndi-env.mjs
scripts/linux/: Dockerfile.appimage  debug-appimage-ui.sh  install-remote-test-deps.sh  launch-tandem-appimage.sh  matrix-appimage-ui.sh  patch-appimage.sh  post-bundle-ndi.mjs  prepare-linux-bundle.sh  remote-build.sh  remote-dev.sh  remote-launch-appimage.sh  remote-rebuild.sh  remote-run-verify.sh  remote-test.env  run-remote-verify.ps1  run-tandem-appimage.sh  strip-appimage-glibc-libs.sh  test-appimage-capture.sh  test-appimage.sh  test-capture-deps.sh  test-extract-patch.sh  test-host-webkit.sh  test-launcher.sh  test-list-sources.sh  test-patched-appimage.sh  verify-appimage-ui.sh
scripts/macos/: post-bundle-ndi.mjs  run-test-on-mac.sh  setup-test-machine.sh  test-ndi.sh
